--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
             />
           </svg>
         </div>
-        <canvas id="canvasImg"> </canvas>
-        <img src="product.jpg" class="responsive-img" />
+        <div class="view">
+          <canvas id="canvasImg"> </canvas>
+          <img src="product.png" />
+        </div>
       </div>
       <div class="controlsWrapper">
         <input type="file" placeholder="Choose a product" id="filesUploader" />
